Fix main side scrollbar

--- a/TabProjekt-Angular/src/app/sidenav/sidenav.component.css
+++ b/TabProjekt-Angular/src/app/sidenav/sidenav.component.css
@@ -1,6 +1,6 @@
 .example-container {
   width: available;
-  height: 100%;
+  height: 93vh;
 
 }
 .text1{
